--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://efarinyes.github.io/exercicis-tecnocampus",
   "name": "exercicis",
   "version": "0.1.0",
   "private": true,
